<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/text_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_note_title"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/spinner_courses"
        app:layout_constraintStart_toStartOf="@+id/spinner_courses"
        app:layout_constraintTop_toBottomOf="@+id/spinner_courses" />

    <EditText
        android:id="@+id/text_note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_note_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/text_note_title"
        app:layout_constraintStart_toStartOf="@+id/text_note_title"
        app:layout_constraintTop_toBottomOf="@+id/text_note_title" />

    <Spinner
        android:id="@+id/spinner_courses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.sap.akos.notekeeper.custom.ModuleStatusView
        android:id="@+id/module_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/text_note_text"
        app:layout_constraintRight_toRightOf="@+id/text_note_text"
        app:layout_constraintTop_toBottomOf="@+id/text_note_text" />

    <!--    <ProgressBar-->
<!--        android:id="@+id/progress_bar"-->
<!--        style="?android:attr/progressBarStyle"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/text_note_text"-->
<!--        app:layout_constraintStart_toStartOf="@+id/text_note_text"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/text_note_text" />-->

</androidx.constraintlayout.widget.ConstraintLayout>