<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/title_notes" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_courses" />
    </group>
    <item android:title="@string/title_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/title_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/title_send" />
        </menu>
    </item>
</menu>