<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="100"
        android:title="@string/text_next"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="101"
        android:title="@string/title_send_as_email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/title_cancel"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_set_reminder"
        android:orderInCategory="103"
        android:title="@string/title_menu_item_set_reminder" />
</menu>